reorganize file structure

--- a/tree.html
+++ b/tree.html
@@ -1,6 +1,8 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <script src="data.js"></script>
+    <script src="svgdom.js"></script>
     <script src="maketree.js"></script>
 </head>
 
