new words, add explanation

--- a/tree.html
+++ b/tree.html
@@ -7,6 +7,15 @@
 </head>
 
 <body>
+    <svg id="tree">
+        <style>
+            tspan {
+                cursor: pointer;
+                font-family: 'Times New Roman', Times, serif;
+            }
+        </style>
+    </svg>
+    <div id="explanation"></div>
     <script>
         drawTree();    
     </script>
